<resources>
    <string name="app_name">Sp20_bse_024_RoomApi</string>
    <string name="mail">enter email</string>
    <string name="name">enter name</string>
    <string name="single">single</string>
    <string name="married">married</string>
    <string name="txt">marital status</string>
    <string name="address">address</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="reset">reset</string>
    <string name="search">search</string>
</resources>