<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txt"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioGroup
        android:id="@+id/rd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single" />

        <RadioButton
            android:id="@+id/married"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/married" />

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="#2196F3"
            android:onClick="addData"
            android:text="@string/add"
            app:layout_constraintEnd_toStartOf="@+id/search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:backgroundTint="#2196F3"
            android:onClick="searchData"
            android:text="@string/search"
            app:layout_constraintBaseline_toBaselineOf="@+id/add"
            app:layout_constraintEnd_toStartOf="@+id/update"
            app:layout_constraintStart_toEndOf="@+id/add" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:backgroundTint="#2196F3"
            android:onClick="updateData"
            android:text="@string/update"
            app:layout_constraintBaseline_toBaselineOf="@+id/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/search" />

        <Button
            android:id="@+id/delete"
            android:layout_width="152dp"
            android:layout_height="40dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="46dp"
            android:backgroundTint="#2196F3"
            android:onClick="deleteButtonAction"
            android:text="@string/delete"
            app:layout_constraintEnd_toStartOf="@+id/reset"
            app:layout_constraintStart_toStartOf="@+id/add"
            app:layout_constraintTop_toBottomOf="@+id/add"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/reset"
            android:layout_width="145dp"
            android:layout_height="43dp"
            android:layout_marginStart="91dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="92dp"
            android:backgroundTint="#2196F3"
            android:onClick="resetAction"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/add"
            app:layout_constraintTop_toBottomOf="@+id/search"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>